# voxels

./: .clang-format  .gitignore  .gitmodules  ApplicationEvent_8h.html  ApplicationEvent_8h.js  ApplicationEvent_8h_source.html  Application_8cpp.html  Application_8cpp.js  Application_8cpp_source.html  Application_8h.html  Application_8h.js  Application_8h_source.html  AssertLib_8h.html  AssertLib_8h.js  AssertLib_8h_source.html  AssetManager_8h.html  AssetManager_8h.js  AssetManager_8h_source.html  BMPWriter_8h.html  BMPWriter_8h.js  BMPWriter_8h_source.html  BatchRenderer2D_8h.html  BatchRenderer2D_8h.js  BatchRenderer2D_8h_source.html  BlockTypes_8h.html  BlockTypes_8h.js  BlockTypes_8h_source.html  Buffer_8cpp.html  Buffer_8cpp_source.html  Buffer_8h.html  Buffer_8h.js  Buffer_8h_source.html  CMakeLists.txt  CameraTypes_8h.html  CameraTypes_8h.js  CameraTypes_8h_source.html  Doxyfile  EntryPoint_8cpp.html  EntryPoint_8cpp.js  EntryPoint_8cpp_source.html  (+695 more)
.github/workflows/: build.yml  docs.yml
assets/shaders/: basic_mvp.vert  batch_renderer_2d.frag  batch_renderer_2d.vert  blur.frag  color.frag  lit.frag  lit.vert  pixel.frag  textured.frag  textured.vert  wave_dissolve.frag
json-viewer/: app.py  visualiser.ipynb
sandbox/: .luarc.json
sandbox/assets/scripts/: engine.lua  init.lua  main.lua
sandbox/src/: SandboxApp.cpp  SandboxApp.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+104 more)
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ConfigLoader.cpp  ConfigLoader.h  EntryPoint.cpp  EntryPoint.h  Frustum.cpp  Frustum.h  Input.cpp  Input.h  LightingManager.cpp  LightingManager.h  Logging.h  Material.h  Octree.cpp  Octree.h  PerlinNoise.cpp  PerlinNoise.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h  VoidNoise.cpp  VoidNoise.h  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelTerrain.cpp  VoxelTerrain.h  World.cpp  World.h  doxgen-config  main.cpp  pch.cpp  pch.h  shaders.h
src/Camera/: CameraTypes.h  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Core/: AssetManager.h  FPSCounter.cpp  FPSCounter.h  FileSystem.h  FileWatcher.h  Logging.h  Resource.h  TaskSystem.h  Transform.h
src/Core/Utils/: AssertLib.h  BMPWriter.h  Logging.h
src/Debug/: Profiler.cpp  Profiler.h
src/Events/: ApplicationEvent.h  Event.h  EventDebugger.h  EventDispatcher.h  Events.h  KeyCodes.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Input/: InputSystem.cpp  InputSystem.h
src/Noise/: INoiseGenerator.h  NoiseGenerator.h
src/Noise/PerlinNoise/: PerlinNoise.cpp  PerlinNoise.h
src/Noise/SimplexNoise/: SimplexNoise.cpp  SimplexNoise.h
src/Noise/ValueNoise/: ValueNoise.cpp  ValueNoise.h
src/Noise/VoidNoise/: VoidNoise.cpp  VoidNoise.h
src/Renderer/: BatchRenderer2D.h  Buffer.cpp  Buffer.h  IRenderer.h  Light.h  Material.cpp  Material.h  MeshTemplates.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRenderer.cpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h  RenderAPI.h  RenderObject.h  RenderableObject.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Texture.cpp  Texture.h  Types.h  VertexArray.cpp  VertexArray.h
src/Scene/: GameScene.h  Scene.cpp  Scene.h  SceneManager.h  SceneObject.h
src/Scripting/: LuaScriptSystem.cpp  LuaScriptSystem.h
src/Shader/: DefaultShaders.cpp  DefaultShaders.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  ShaderHotReload.cpp  ShaderHotReload.h  ShaderLibrary.cpp  ShaderLibrary.h
src/TerrainSystem/: BlockTypes.h  TerrainSystem.cpp  TerrainSystem.h
src/Threading/: ThreadPool.cpp  ThreadPool.h
src/UI/: ImGuiFlameGraph.cpp  ImGuiFlameGraph.h  ImGuiOverlay.cpp  ImGuiOverlay.h
src/Window/: OpenGLWindow.cpp  OpenGLWindow.h  Window.h
